--- a/index.html
+++ b/index.html
@@ -5,8 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            margin: 0;
+        }
+        .mofang{
+            margin-top: 50px;
+            margin-left: 50px;
+            text-align: center;
+            width: 250px;
+            height: 250px;
+            /* background-color: rgb(32, 145, 243); */
+            /* border: 1px solid red; */
+            transition: 0.7s;
+            /* cursor: pointer; */
+
+        }
+        .mofang img{
+            width: 200px;
+            height: 200px;
+            transition: 0.7s;
+            border-radius: 10px;
+        }
+        img:hover{
+            transform: scale(1.2);
+        }
+        a{
+            text-decoration: none;
+            display: block;
+            font-size: 30px;
+            font-weight: bold;
+            transition: .5s;
+            cursor: pointer;
+        }
+        a:hover{
+            color: aqua;
+        }
+    </style>
 </head>
 <body>
-    <p>hhhhhhhhhhh</p>
+  <div class="mofang">
+   
+    <a href="./3d魔方.html">
+        <img src="./img/01.jpg" alt="魔方">
+<br>3d魔方
+        </a>
+        
+  </div>
 </body>
 </html>
