--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         body{
             margin: 0;
         }
+        /* 魔方 */
         .mofang{
             margin-top: 50px;
             margin-left: 50px;
@@ -41,9 +42,25 @@
         a:hover{
             color: aqua;
         }
+        h2{
+            font-size: 50px;
+            text-align: center;
+        }
+
+        /* 3d旋转相册 */
+
+        .xuanzhuangxiangce{
+            margin-top: -250px;
+            margin-left: 300px;
+            text-align: center;
+            width: 250px;
+            height: 250px;
+            transition: 0.7s;
+        }
     </style>
 </head>
 <body>
+    <h2>h5css3</h2>
   <div class="mofang">
    
     <a href="./3d魔方.html">
@@ -51,6 +68,14 @@
 <br>3d魔方
         </a>
         
+
+
+        <div class="xuanzhuangxiangce">
+   
+            <a href="./3d旋转相册/女友.html">
+                <img src="./img/02.jpg" alt="相册">
+        <br>3d旋转相册
+                </a>
   </div>
 </body>
 </html>
