--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h2>h5css3</h2>
   <div class="mofang">
    
-    <a href="./3d魔方.html">
+    <a href="./3d魔方.html" target="_blank" rel="noopener noreferrer">
         <img src="./img/01.jpg" alt="魔方">
 <br>3d魔方
         </a>
@@ -72,7 +72,7 @@
 
         <div class="xuanzhuangxiangce">
    
-            <a href="./3d旋转相册/女友.html">
+            <a href="./3d旋转相册/女友.html" target="_blank" rel="noopener noreferrer">
                 <img src="./img/02.jpg" alt="相册">
         <br>3d旋转相册
                 </a>
