--- a/index.html
+++ b/index.html
@@ -57,10 +57,18 @@
             height: 250px;
             transition: 0.7s;
         }
+        .zhengfangti{
+            margin-top: -250px;
+            margin-left: 600px;
+            text-align: center;
+            width: 250px;
+            height: 250px;
+            transition: 0.7s;
+        }
     </style>
 </head>
 <body>
-    <h2>h5css3</h2>
+    <h2>就这样吧,先看着</h2>
   <div class="mofang">
    
     <a href="./3d魔方.html" target="_blank" rel="noopener noreferrer">
@@ -77,5 +85,16 @@
         <br>3d旋转相册
                 </a>
   </div>
+
+
+
+
+  <div class="zhengfangti">
+   
+    <a href="./正方体/index.html" target="_blank" rel="noopener noreferrer">
+        <img src="./img/03.jpg" alt="正方体">
+<br>正方体
+        </a>
+</div>
 </body>
 </html>
