--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h2>就这样吧,先看着</h2>
   <div class="mofang">
    
-    <a href="./3d魔方.html" target="_blank" rel="noopener noreferrer">
+    <a href="./loading/模板/index.html" target="_blank" rel="noopener noreferrer">
         <img src="./img/01.jpg" alt="魔方">
 <br>3d魔方
         </a>
