--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
    
     <a href="./loading/模板/index.html" target="_blank" rel="noopener noreferrer">
         <img src="./img/01.jpg" alt="魔方">
-<br>3d魔方
+<br>loading效果
         </a>
         
 
