--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
             height: 250px;
             transition: 0.7s;
         }
+
+        .shoufengqin{
+            margin-top: -250px;
+            margin-left: 900px;
+            text-align: center;
+            width: 250px;
+            height: 250px;
+            transition: 0.7s;
+        }
     </style>
 </head>
 <body>
@@ -94,6 +103,16 @@
     <a href="./正方体/index.html" target="_blank" rel="noopener noreferrer">
         <img src="./img/03.jpg" alt="正方体">
 <br>正方体
+        </a>
+</div>
+
+
+
+<div class="shoufengqin">
+   
+    <a href="./手风琴/手凤琴.html" target="_blank" rel="noopener noreferrer">
+        <img src="./img/04.jpg" alt="手风琴">
+<br>手风琴
         </a>
 </div>
 </body>
