--- a/index.html
+++ b/index.html
@@ -47,16 +47,7 @@
             text-align: center;
         }
 
-        /* 3d旋转相册 */
 
-        .xuanzhuangxiangce{
-            margin-top: -250px;
-            margin-left: 300px;
-            text-align: center;
-            width: 250px;
-            height: 250px;
-            transition: 0.7s;
-        }
         .zhengfangti{
             margin-top: -250px;
             margin-left: 600px;
@@ -93,19 +84,12 @@
   <div class="mofang">
    
     <a href="./loading/模板/index.html" target="_blank" rel="noopener noreferrer">
-        <img src="./img/01.jpg" alt="魔方">
+        <img src="./img/01.jpg" alt="">
 <br>loading效果
         </a>
         
 
 
-        <div class="xuanzhuangxiangce">
-   
-            <a href="./3d旋转相册/女友.html" target="_blank" rel="noopener noreferrer">
-                <img src="./img/02.jpg" alt="相册">
-        <br>3d旋转相册
-                </a>
-  </div>
 
 
 
