--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 <div class="portfolio-box-img"><img src="./assets/images/img1.gif" class="img-fluid"
                                         alt="member-image"></div>
                                 <div class="portfolio-box-detail">
-                                    <p>Media,Icons</p>
+                                    <p>loading加载</p>
                                     <h4>点击打开</h4>
                                 </div>
                             </div>
@@ -169,7 +169,7 @@
                                 <div class="portfolio-box-img"><img src="./assets/images/img2.gif" class="img-fluid"
                                         alt="member-image"></div>
                                 <div class="portfolio-box-detail">
-                                    <p>Illustrations</p>
+                                    <p>手风琴</p>
                                     <h4>点击打开</h4>
                                 </div>
                             </div>
@@ -180,7 +180,7 @@
                                 <div class="portfolio-box-img"><img src="./assets/images/img3.gif" class="img-fluid"
                                         alt="member-image"></div>
                                 <div class="portfolio-box-detail">
-                                    <p>Graphics,UI Elements</p>
+                                    <p>tabble动画</p>
                                     <h4>点击打开</h4>
                                 </div>
                             </div>
