--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <section class="section">
         <div class="container">
             <!-- SECTION FILTER ================================================== -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12">
                     <div class="portfolio-filter text-center"><a href="javascriipt:void(0)#" data-filter="*"
                             class="current waves-effect waves-success">全部</a><a href="javascriipt:void(0)#"
@@ -149,7 +149,7 @@
                             class="waves-effect waves-success">4444</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="port portfolio-masonry m-b-30">
                 <div class="portfolioContainer row" style="position: relative; height: 1730.69px;">
                     <div class="col-lg-4 design personal" style="position: absolute; left: 0px; top: 0px;"><a
