--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
                             </div>
                         </a></div>
                     <div class="col-lg-4 personal android" style="position: absolute; left: 0px; top: 263px;"><a
-                            href="javascriipt:void(0)">
+                            href="./视差滚动/视差滚动.html"  target="_blank" rel="noopener noreferrer">
                             <div class="portfolio-box">
                                 <div class="portfolio-box-img"><img src="./assets/images/img4.jpg" class="img-fluid"
                                         alt="member-image"></div>
                                 <div class="portfolio-box-detail">
-                                    <p>Icons,Illustrations</p>
-                                    <h4>Morning Dew</h4>
+                                    <p>视差滚动</p>
+                                    <h4>点击打开</h4>
                                 </div>
                             </div>
                         </a></div>
