--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
                             </div>
                         </a></div>
                     <div class="col-lg-4 mockup android" style="position: absolute; left: 760px; top: 479px;"><a
-                            href="javascriipt:void(0)">
+                            href="./悬浮菜单.html"  target="_blank" rel="noopener noreferrer">
                             <div class="portfolio-box">
                                 <div class="portfolio-box-img"><img src="./assets/images/img5.jpg" class="img-fluid"
                                         alt="member-image"></div>
                                 <div class="portfolio-box-detail">
-                                    <p>UI Elements,Media</p>
-                                    <h4>Console Activity</h4>
+                                    <p>悬浮菜单</p>
+                                    <h4>点击打开</h4>
                                 </div>
                             </div>
                         </a></div>
