--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
                             <p>手风琴</p>
                         </div>
                        </a>
-                        <div></div>
+                       <a href="./雾青+翠蓝tabbar动画特效/雾青tabbar动画特效.html" target="_blank" rel="noopener noreferrer">
+                        <div>
+                            <img src="./img/js2.jpg" alt="">
+                            <p>tabbar动画特效</p>
+                        </div>
+                       </a>
                         <div></div>
                   
                     </div>
