--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
                         <p>iphone14</p>
                     </div>
                    </a>
+
+
+
+                   <a href="./hover动画/hover.html" target="_blank" rel="noopener noreferrer">
+                    <div>
+                        <img src="./img/css06.jpg" alt="">
+                        <p>hover动画</p>
+                    </div>
+                   </a>
                      
                    
                     </div>
