--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <style>
-
-
-
-
-
-
-
-
-    </style>
 </head>
 <body>
+    <div class="video-bg">
+        <video width="320" height="240" autoplay loop muted>
+            <source src="./img/7btrrd.mp4" type="video/mp4">
+        </video>
+   </div>
+
+
     <div class="tab">
     <h1>个人作品</h1>
         <div class="box">
