--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="bg">html,css</li>
                 <li>js</li>
                 <li>jq</li>
-                <li>网页</li>
+                <li>界面</li>
                 <li>vue</li>
                 <li>tab6</li>
                 <li>tab7</li>
@@ -142,6 +142,7 @@
                         </div>
                     </a> 
                     </div>
+                    <!-- 页面 -->
                     <div class="tab_right">
                         <!-- <img src="assets/a4.png" alt=""> -->
                       <a href="./360极速浏览器/index.html" target="_blank" rel="noopener noreferrer">
@@ -150,7 +151,13 @@
                             <p>360浏览器</p>
                         </div>
                       </a>
-                        <div></div>
+                      <a href="./超市/index.html"  target="_blank" rel="noopener noreferrer">
+                        <div>
+                            <img src="./img/yemian.jpg" alt="">
+                           <p>bootstrap 超市</p>
+                        </div>
+                      </a>
+                      
               
                     </div>
                     <div class="tab_right">
