--- a/index.html
+++ b/index.html
@@ -163,8 +163,18 @@
                             <p>输入框打字特效</p>
                         </div>
                     </a>
-                        <div></div>
-                        <div></div>
+                    <a href="./豆果美食/dist/index.html" target="_blank" rel="noopener noreferrer">
+                        <div>
+                            <img src="./img/douguo.jpg" alt="">
+                            <p>豆果美食</p>
+                        </div>
+                    </a>
+                    <a href="./网易云音乐/index.html" target="_blank" rel="noopener noreferrer">
+                        <div>
+                            <img src="./img/wangyiyun.jpg" alt="">
+                            <p>仿网易云</p>
+                        </div>
+                    </a>
                  
                     </div>
                     <div class="tab_right">
